unpackaged/main/default/objects/PPM_Project__c/PPM_Project__c.object-meta.xml
<CustomObject>
    <description>Projects are a core object in this application.  Projects can be related work requests that describe the initial project approval.  Additional work requests can be used for change management.  Projects include team members, benefit definition, budget and cost line items, risks, status reports, and time.  Often, organizations will use activities or create a child object to track milestones/gates.</description>
    <label>Project</label>
    <nameField>
        <label>Project  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>