unpackaged/main/default/objects/PPM_Project__c/fields/Alternatives_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Alternatives_to_Project__c</fullName>
    <inlineHelpText>What is the cost of doing nothing?</inlineHelpText>
    <label>Alternatives to Project</label>
    <type>TextArea</type>
</CustomField>