unpackaged/main/default/objects/PPM_Project__c/fields/Budgeted_Costs__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total budget for the project.</inlineHelpText>
    <label>Budgeted Costs</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>