unpackaged/main/default/objects/PPM_Project__c/fields/Business_Need_Definition__c.field-meta.xml
<CustomField>
    <fullName>Business_Need_Definition__c</fullName>
    <inlineHelpText>Please describe project in terms of the business unit requesting work.</inlineHelpText>
    <label>Business Need Definition</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>