unpackaged/main/default/objects/PPM_Project__c/fields/Business_Unit_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Sponsor__c</fullName>
    <label>Business Unit Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>