unpackaged/main/default/objects/PPM_Project__c/fields/Communication_Reporting_Process__c.field-meta.xml
<CustomField>
    <fullName>Communication_Reporting_Process__c</fullName>
    <inlineHelpText>Please Describe the Communication &amp; Reporting Process.</inlineHelpText>
    <label>Communication &amp; Reporting Process</label>
    <type>TextArea</type>
</CustomField>