unpackaged/main/default/objects/PPM_Project__c/fields/Delivered_Business_Asset__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Business_Asset__c</fullName>
    <label>Delivered Business Asset</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Operations/Services</fullName>
            </value>
            <value>
                <fullName>Human Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>