unpackaged/main/default/objects/PPM_Project__c/fields/Implementation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Strategy__c</fullName>
    <inlineHelpText>Is this a &quot;do-it yourself&quot; project or do we need outside vendors/contractor assistance?  Are we forging new relationships and contracts?</inlineHelpText>
    <label>Implementation Strategy</label>
    <type>TextArea</type>
</CustomField>