unpackaged/main/default/objects/PPM_Project__c/fields/Infrastructure_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Requirements__c</fullName>
    <inlineHelpText>What are the high level infrastructure requirements involved?</inlineHelpText>
    <label>Infrastructure Requirements</label>
    <type>TextArea</type>
</CustomField>