unpackaged/main/default/objects/PPM_Project__c/fields/Project_Goal__c.field-meta.xml
<CustomField>
    <fullName>Project_Goal__c</fullName>
    <label>Project Goal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Grow Business</fullName>
            </value>
            <value>
                <fullName>Run Business</fullName>
            </value>
            <value>
                <fullName>Transformation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>