unpackaged/main/default/objects/PPM_Project__c/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <inlineHelpText>Please describe the scope of the project.</inlineHelpText>
    <label>Project Scope</label>
    <type>TextArea</type>
</CustomField>