unpackaged/main/default/objects/PPM_Project__c/fields/Project_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Project_Success_Criteria__c</fullName>
    <inlineHelpText>Please define Project Success Criteria.</inlineHelpText>
    <label>Project Success Criteria</label>
    <type>TextArea</type>
</CustomField>