unpackaged/main/default/objects/PPM_Project__c/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IF( ISPICKVAL(Project_Phase__c, &#39;Draft - Phase Zero&#39;),
 IF( Percent_Complete_Hours__c &lt; 0.05,
  IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&#39;, &#39;Green&#39;),
   IF( Percent_Complete_Hours__c &lt; 0.15,
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&#39;, &#39;Yellow&#39;),
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&#39;, &#39;Red&#39;)
   )
 ),

IF( ISPICKVAL(Project_Phase__c, &#39;Design&#39;),
 IF( Percent_Complete_Hours__c &lt; 0.25,
  IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&#39;, &#39;Green&#39;),
   IF( Percent_Complete_Hours__c &lt; 0.35,
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&#39;, &#39;Yellow&#39;),
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&#39;, &#39;Red&#39;)
   )
 ),
IF( ISPICKVAL(Project_Phase__c, &#39;Proof of Concept&#39;),
 IF( Percent_Complete_Hours__c &lt; 0.5,
  IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&#39;, &#39;Green&#39;),   
   IF( Percent_Complete_Hours__c &lt; 0.60,
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&#39;, &#39;Yellow&#39;),
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&#39;, &#39;Red&#39;)
   )
 ),
IF( ISPICKVAL(Project_Phase__c, &#39;Build&#39;),
 IF( Percent_Complete_Hours__c &lt; 0.75,
  IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&#39;, &#39;Green&#39;),   
   IF( Percent_Complete_Hours__c &lt; 0.85,
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&#39;, &#39;Yellow&#39;),
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&#39;, &#39;Red&#39;)
   )
 ),
IF( ISPICKVAL(Project_Phase__c, &#39;Implementation&#39;),
 IF( Percent_Complete_Hours__c &lt; 1,
  IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOT&amp;oid=00D80000000ZNOz&#39;, &#39;Green&#39;),   
   IF( Percent_Complete_Hours__c &lt; 1.1,
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOd&amp;oid=00D80000000ZNOz&#39;, &#39;Yellow&#39;),
    IMAGE(&#39;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000eXOY&amp;oid=00D80000000ZNOz&#39;, &#39;Red&#39;)
   )
 ),
&#39;&#39;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an example of a conditional, custom formula field that evaluates the Project Phase and the Percent Complete (hours).  Default Value for &quot;Draft - Phase Zero&quot; (Green 0 - .05%, Yellow .06 - .15, Red .16 and above).  For more definition, go into setup</inlineHelpText>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>