unpackaged/main/default/objects/PPM_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Product_Manager__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Project_End_Date__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Phase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>